fixed spacing

--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -65,6 +65,10 @@ h1, h2, h3, h4, h5, h6 {
     #colorlib-hero {
      min-height:600px;
     }
+
+    .colorlib-testimonials {
+        height: 270px!important;
+    }
   }
 
 
